--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <a href="#about">Resume</a>
     <a href="#contact">Contact</a>
 </div> 
+<hr class="Dash">      
 
-<img src="img/image.png" alt="LA" style="width:100%"> 
-<div class="">
+<img src="img/image.png" alt="LA" style="width:100%">
+<hr class="Dash">      
+
+<div class="video">
   <video width="100%" height="240" controls>
     <source src="video/127919002-businessman-working-home-balco.mp4" type="video/mp4">
     <source src="img/127919002-businessman-working-home-balco.ogg" type="video/ogg">
@@ -61,7 +64,19 @@
     <input type="text" id="lname" name="lname">
     <input type="submit" value="submit">
   </form>
-  
+</div>
+<hr class="Dash">      
+
+<footer>
+ <article>
+  <h1> GOMYCPODE IS THE BEST SCHOOL IN ABUJA</h1>
+  <P>THE TEACGING OF GOMYCODE IS EXCELLENCE VERY AFFORDSABLRE IN LESSONS OR COURSE FEE AND THE ENVIROMENT IS CONDUISIVE</P>
+  <P>WE LEARN AND GET EMPLOYED AT GOMYCODE CODING SCHOOL COME AND EXPERENCE NEW CODING ENVIROMENT AT WUSE2 ABUJA NIGERIA</P>
+  <a href="mailto:hello@gomycode.com">GOMYCODE</a>
+</article> 
+</footer>
+<hr class="Dash">      
+
 </div>
 </body>
 </html>
