--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
 
 <footer>
  <article>
-  <h1> GOMYCPODE IS THE BEST SCHOOL IN ABUJA</h1>
-  <P>THE TEACGING OF GOMYCODE IS EXCELLENCE VERY AFFORDSABLRE IN LESSONS OR COURSE FEE AND THE ENVIROMENT IS CONDUISIVE</P>
-  <P>WE LEARN AND GET EMPLOYED AT GOMYCODE CODING SCHOOL COME AND EXPERENCE NEW CODING ENVIROMENT AT WUSE2 ABUJA NIGERIA</P>
+  
+  <h1> GOMYCODE IS THE BEST SCHOOL IN ABUJA</h1>
+  <P>The Teachings Of GOMYCODE Is Execellence Very In Lessons Or Course Fee And The Enviroment Is Condiusive</P>
+  <P>We Learn And Get Employed At GOMYCODE Coding Schooling Come And Experience New Coding Enviroment At WUSE2 ABUJA NIGERIA</P>
   <a href="mailto:hello@gomycode.com">GOMYCODE</a>
 </article> 
 </footer>
-<hr class="Dash">      
+<hr class="Dash">
 
 </div>
 </body>
