--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </audio>
 </div>
   
-  <div class="about-section" id="about">
+  <div class="about" id="about">
     <h1>About Us Page</h1>
     <p> my name is gideon and am a gomycode student running a full stack programe</p>
     <p>Am the baddest programmer ever if you need more detial ask my boss</p><a href="mailto:okekedavid1333@gmail.com">MR DAVID</a>
@@ -52,20 +52,20 @@
       <input type="submit">
     </form>
   </div>
-  <div class="contact"><form>
+  <div class="contact" id="contact"><form>
     <label for="fname"> First Name</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="lname"> Last Name</label><br>
     <input type="text" id="lname" name="lname">
     <input type="submit" value="submit">
   </form></div>   
-<footer></footer>
-
- <article>
+<footer>
+<div class="footer-description" id="gomycode">
+  <article>
   <h1> GOMYCPODE IS THE BEST SCHOOL IN ABUJA</h1>
-  <P>THE TEACGING OF GOMYCODE IS EXCELLENCE VERY AFFORDSABLRE IN LESSONS OR COURSE FEE AND THE ENVIROMENT IS CONDUISIVE   WE LEARN AND GET EMPLOYED AT GOMYCODE CODING SCHOOL COME AND EXPERENCE NEW CODING ENVIROMENT AT WUSE2 ABUJA NIGERIA</P>
- 
-  <a href="mailto:hello@gomycode.com">GOMYCODE</a></article>  
+ <a href="mailto:hello@gomycode.com">GOMYCODE</a></article> 
+ <P>THE TEACGING OF GOMYCODE IS EXCELLENCE VERY AFFORDSABLRE IN LESSONS OR COURSE FEE AND THE ENVIROMENT IS CONDUISIVE   WE LEARN AND GET EMPLOYED AT GOMYCODE CODING SCHOOL COME AND EXPERENCE NEW CODING ENVIROMENT AT WUSE2 ABUJA NIGERIA</P></div>
+
 </footer>     
 </div>
 <div style="background-color: #e5e5e5;text-align: center;padding: 10px; margin-top: 7px; border-style: inset;">Copyright gidyportfolio.com</div>
