--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <source src="audio/Min-Theophilus-Sunday-Only-You-P.mp3" type="audio/mpeg">
     Your AUDIO cant be played unsupported broswer download gomycode Browser
   </audio>
-</div>
-  
+</div class="content">
+<div id="rcorners"><p>BELOW ARE THE PROJECT WORK OF GIT COMMAND ON VSCOD SOFTWARE</p></div>
   <div class="about" id="about">
     <h1>About Us Page</h1>
     <p> my name is gideon and am a gomycode student running a full stack programe</p>
@@ -46,18 +46,18 @@
   </div> 
 
 
-  <div class="file">
+  <div class="file" id="form">
     <form action="/action_page.php">
       <input type="file" id="myFile" name="filename">
       <input type="submit">
     </form>
   </div>
-  <div class="contact" id="contact"><form>
+  <div class="container" id="contact"><form>
     <label for="fname"> First Name</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="lname"> Last Name</label><br>
     <input type="text" id="lname" name="lname">
-    <input type="submit" value="submit">
+    <input class="row" type="submit"  value="submit">
   </form></div>   
 <footer>
 <div class="footer-description" id="gomycode">
