--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <a href="#work">Work</a>
     <a href="#about">Resume</a>
     <a href="#contact">Contact</a>
-  </ul>     
+  </ul>  
+    <img src="img/image5.png" alt="img5" style="width: 100%;">
+  
 <!--PAGE CONTENT-->
 <div class="media">
   <video style="margin:0 0px;width:100%;"  controls >
